# qiskit-studio-design

./: .dockerignore  .env.local.template  .gitignore  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.tsbuildinfo
.github/: CODEOWNERS
api/: .env.template  README.md
api/chat-agent/: Dockerfile  agents.yaml  pyproject.toml  workflow.yaml
api/chat-agent/documentation/: chsh-inequality.md  combine-error-mitigation-techniques.md  improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.md  improving-estimation-of-expectation-values-with-operator-backpropagation.md  quantum-approximate-optimization-algorithm.md  quantum-kernel-training.md  qunova-hivqe.md
api/chat-agent/scripts/: add-rag-docs-remote-embed.py
api/chat-agent/tests/: test_milvus.py
api/codegen-agent/: Dockerfile  agents.yaml  pyproject.toml  regex-extractor.py  workflow.yaml
api/coderun-agent/: Dockerfile  README.md  agent.py  deployment.yaml  log_conf.yml  pyproject.toml  test_complete_integration.py  test_token_integration.py
api/coderun-agent/python_demos/: CHSH.py  chemistry.py  maxcut.py
api/coderun-agent/tests/: __init__.py  test_agent.py  test_config_replacement.py  test_quantum_examples.py
app/: globals.css  layout.tsx  page.tsx
components/: circuit-builder.tsx  code-panel.tsx  quantum-composer.tsx  sidebar.tsx  theme-provider.tsx
docs/: architecture.md  nodes.md  usage.md
hooks/: use-mobile.tsx  use-toast.ts  (+1 more)
(+131 files in other folders)
