[project]
name = "qiskit-studio-api-codegen-agent"
version = "0.1.0"
description = "An API for an AI code generation agent"
authors = [
    { name="Qiskit Studio Contributors" }
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "maestro @ git+https://github.com/AI4quantum/maestro.git@v0.8.0",
]
