[project]
name = "coderun-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "qiskit>2.0.0",
    "qiskit-ibm-runtime>=0.41.0",
    "qiskit-aer>=0.17.1",
    "qiskit_addon_sqd>=0.11.0",
    "ffsim>=0.0.60",
    "pyscf>=2.5.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "requests>=2.31.0",
]
